--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -184,7 +184,7 @@
   }
 
   .side-card-body:nth-child(4){
-    background-color: rgb(201, 113, 218);
+    background-color: #c971da;
   }
 
   .side-card-text{
