--- a/src/components/styles/blog.css
+++ b/src/components/styles/blog.css
@@ -74,7 +74,7 @@
 
   .lower-blog{
     padding-top: 20px;
-    border-top: 1px solid #ffc265;
+    border-top: 1px solid #9c9797;
     display: flex;
     flex-direction: row;
     align-items: center;
