--- a/src/components/styles/imageslider.css
+++ b/src/components/styles/imageslider.css
@@ -30,7 +30,7 @@
   height: 250px;
   overflow: hidden;
   border-radius: 25px;
-  border: solid 2px #ffc265;
+  border: solid 2px #ffffff;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.432);
 }
 
@@ -114,7 +114,7 @@
   border: none;
   font-size: 48px;
   cursor: pointer;
-  color: #ffc265;
+  color: #ffffff;
 }
 
 .left-arrow {
@@ -129,7 +129,7 @@
 
 .left-arrow:hover,
 .right-arrow:hover {
-  color: #D09640;
+  color: #888887;
 }
 
 .dots {
@@ -141,14 +141,14 @@
   height: 15px;
   width: 15px;
   margin: 0 5px;
-  background-color: #D09640;;
+  background-color: #ffffff;;
   border-radius: 50%;
   display: inline-block;
   cursor: pointer;
 }
 
 .dot.active {
-  background-color: #ffc265;
+  background-color: #888887;
 }
 
 
