--- a/src/components/styles/service.css
+++ b/src/components/styles/service.css
@@ -22,7 +22,7 @@
 }
 
 .faq-title{
-    color:#ffc265;
+    color:#f131f5;
     font-family: monospace;
     font-weight: bold;
     margin-bottom: 20px;
@@ -37,7 +37,7 @@
 }
 
 .faq-desc{
-  color: #ffc265;
+  color: #f131f5;
   font-size: 18px;
 }
 
@@ -77,7 +77,7 @@
   }
   
   .faq-question:hover {
-    color:#ffc265;
+    color:#9678a8;
   }
   
   .faq-answer {
