--- a/src/components/styles/contactus.css
+++ b/src/components/styles/contactus.css
@@ -24,7 +24,7 @@
 }
 
 .t-top-1 span:first-child{
-    color: #f131f5;
+    color: #c300c6;
     font-size: 30px;
     margin-bottom: 20px;
 }
@@ -59,7 +59,7 @@
 .soical-cont i{
     margin-right:40px;
     font-size: 40px;
-    color: #f131f5;
+    color: #c300c6;
 }
 
 .soical-cont i:hover{
@@ -188,12 +188,12 @@ label{
     background-color: #561b78;
     color: white;
     font-size: 24px;
-    padding: 10px;
+    padding:10px 20px;
     border-radius: 20px;
 }
 
 .msg-sub:hover{
-    background-color: #a248d6;
+    background-color: #44185e;
 }
 
 :dir(rtl) .msg-sub{
