--- a/src/components/styles/block.css
+++ b/src/components/styles/block.css
@@ -20,7 +20,7 @@
     box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.432);
     border-radius: 25px;
     padding: 30px;
-    height: 250px;
+    height: 300px;
     width: 100%;
     background: linear-gradient(#390f52,#54107c,#390f52);
     opacity: 0; 
@@ -31,7 +31,7 @@
 
 .blockdev-card-body.animate {
     opacity: 1; 
-    transform: translateX(0); 
+    transform: translateY(0); 
   }
 
 .blockdev-card-text{
@@ -68,6 +68,10 @@
     font-size: 27px;
     font-weight: bold;
     margin-bottom: 20px;
+}
+
+.cur-title,.process-title{
+    padding: 0 20px;
 }
 
 .process-desc{
@@ -109,9 +113,8 @@
     color: rgb(163, 163, 163);
     text-align: center;
     opacity: 0; 
-  transform: translateY(50px); 
-  transition: opacity 0.6s ease, transform 0.6s ease;
-}
+    transform: translateY(50px); 
+    transition: opacity 0.6s ease, transform 0.6s ease;}
 
 .blocksol-card-body.animate {
     opacity: 1;
