--- a/src/components/styles/block.css
+++ b/src/components/styles/block.css
@@ -20,12 +20,12 @@
 .blockdev-card-body{
     display: flex;
     flex-direction: column;
-    box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.432);
+    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.432);
     border-radius: 25px;
     padding: 30px;
-    height: 300px;
+    max-height: 300px;
     width: 100%;
-    background: linear-gradient(#390f52,#54107c,#390f52);
+    background-color:#3d1156;
     opacity: 0; 
     transform: translateX(-50%);
     transition: opacity 0.8s ease-out, transform 0.8s ease-out;
@@ -84,6 +84,10 @@
     margin-bottom: 20px;
 }
 
+.block-process-section{
+    margin-top: 100px;
+}
+
 .block-process-section img{
     width: 100%;
     opacity: 0;
@@ -114,7 +118,7 @@
     min-height: 300px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border: solid 1px white;
-    background-color: #2a1138;
+    background-color: #3d1156;
     color: rgb(163, 163, 163);
     text-align: center;
     opacity: 0; 
@@ -132,6 +136,7 @@
   }
   .blocksol-card-title{
     font-size: 25px;
+    color: white;
     font-weight: bold;
     cursor: pointer;
     margin-bottom: 20px;
@@ -172,7 +177,7 @@
     .blockdev-card-body:nth-child(2),.blockdev-card-body:nth-child(4){
         position: relative;
         right:20%;
-        background: linear-gradient(#54107c,#2a0142,#54107c);
+        background-color:#672872;
 
     }
 
@@ -191,10 +196,18 @@
     .block-process-section img{
         width: 60%;
     }
+
+    .block-process-section{
+        margin-top: 200px;
+    }
     .process-desc{
         font-size: 18px;
         padding: 0 200px;
         margin-bottom: 40px;
+    }
+
+    .blocksol-card-body{
+        width: 400px;
     }
 }
 
