--- a/src/components/styles/block.css
+++ b/src/components/styles/block.css
@@ -32,6 +32,13 @@
 
 }
 
+.blockdev-card-body:nth-child(2),.blockdev-card-body:nth-child(4){
+
+    background-color:#672872;
+
+}
+
+
 .blockdev-card-body.animate {
     opacity: 1; 
     transform: translateY(0); 
