--- a/src/components/styles/imageslider.css
+++ b/src/components/styles/imageslider.css
@@ -21,9 +21,6 @@
 }
 
 
-
-
-
 .slides-container {
   display: flex; 
   transition: transform 0.5s ease-in-out; 
@@ -43,45 +40,56 @@
 }
 
 .text-layer {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
-  z-index: 2;
   color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 
 
 
-.text-layer .slide-title {
+.slide-title {
   font-size: 30px;
   margin-bottom: 10px;
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+ 
+
 }
 
-.text-layer .slide-text {
-  font-size: 15px;
+.slide-text {
+  position: absolute;
+  top: 75%;
+  z-index: 2;
+  font-size: 17px;
+  text-align: center;
+  
 }
 
 @media (min-width: 768px) {
-  .text-layer .slide-title {
+  .slide-title {
     font-size: 50px;
+    top: 22%;
   }
 
-  .text-layer .slide-text {
-    font-size: 20px;
+  .slide-text {
+    font-size: 30px;
+    top: 40%; 
   }
 
-  @media (min-width: 768px) {
     .slider {
       height: 70vh;
     }
+
+    
   
-    .text-layer{
-      top: 25%;
-    }
-  }
 }
 
 .overlay {
